[project]
name = "llm-coding-workflows"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "abundance", email = "abundanceanyanwu@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "docstring-parser>=0.16",
    "pydantic>=2.10.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_coding_workflows"]
